[sc-8014] New pricing implementation (#1216)
* Replace country select by currency select

* Remove budget calculator

* Modify subscriptions table

* Support yearly subscriptions and new usage parameter

* Add new account types to the SDK and account type translations

* Set permissions for v3growth and v3enterprise

* Small fixes

* Modify billing side menu

* Fix build and pricing for ai-token-used

* Add feature flag for new pricing

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -92,6 +92,10 @@
 	"account.type.stash-starter": "Compte Starter",
 	"account.type.stash-startup": "Compte Startup",
 	"account.type.stash-trial": "Compte de prova",
+	"account.type.v3enterprise": "Compte Enterprise",
+	"account.type.v3fly": "Compte Fly",
+	"account.type.v3growth": "Compte Growth",
+	"account.type.v3starter": "Compte Starter",
 	"account.users_amount": "Nombre total d'usuaris al compte",
 	"account.users_left": "Llicències disponibles",
 	"account.zone_description": "Escull la zona i el proveïdor de processament que apareixerà com a predeterminat a totes les Caixes de coneixament d’aquest compte.",
@@ -120,10 +124,9 @@
 	"billing.address": "Adreça",
 	"billing.amount": "Import",
 	"billing.assistance": "Si us plau, <a href=\"{{url}}\"contacta amb nosaltres</a> per obtenir ajuda",
+	"billing.audit-log": "Registre d'activitat",
 	"billing.billing_details": "Dades de facturació",
 	"billing.budget": "Pressupost sota demanda",
-	"billing.budget_calculator": "Calculadora de pressupost",
-	"billing.budget_calculator_help": "La calculadora de pressupost et permet fer un pressupost mensual en funció dels vostres requisits específics.",
 	"billing.budget_description": "Per evitar despeses excessives en els consums mensuals, us recomanem establir un límit mensual. Si no s'estableix un límit, es poden generar càrrecs inesperats pels consums que superin la quantitat assignada.",
 	"billing.budget_warning": "El sobreconsum actual es facturarà aquest mes.<br>\nLa modificació del pressupost entrará en vigor el mes següent.",
 	"billing.cancel-renewal": "Cancel·la la renovació de la teva subscripció.",
@@ -134,19 +137,17 @@
 	"billing.company_address": "Adreça de l'empresa",
 	"billing.contact": "Contactar",
 	"billing.contact_name": "Persona de contacte",
+	"billing.continuous-training": "Entenament continu IA",
 	"billing.cost_over_limits": "Cost per sobre dels límits",
-	"billing.cost_per_consumption": "Costos per consum",
-	"billing.cost_per_consumption_help": "Calcula el teu cost per ús",
 	"billing.country": "País",
 	"billing.current-over-cost": "Sobrecost actual",
 	"billing.current-over-cost-help": "La factura amb els sobrecostos definitius s'enviarà el dia que finalitzi el cicle de facturació.",
+	"billing.current-plan": "Pla actual",
 	"billing.custom_plan": "Pla personalitzat",
 	"billing.delete-warning": "El vostre compte s'eliminarà permanentment set dies després que finalitzi el cicle de facturació.",
 	"billing.email": "Factures enviades a",
 	"billing.end-service": "Finalitza el teu servei",
 	"billing.end-subscription": "Finalitzar la subscripció",
-	"billing.enterprise_ready": "Llest par a l'empresa",
-	"billing.estimate_cost": "Estima el teu cost",
 	"billing.extra_paragraphs_cost": "Si se supera el límit de bloc de text emmagatzemat inclòs, cobrarem {{price}} / bloc de text emmagatzemat.",
 	"billing.features.anon": "Anonimat de dades",
 	"billing.features.apikey": "Clau d'API autoallotjada",
@@ -168,22 +169,21 @@
 	"billing.free": "Gratuït",
 	"billing.history.link": "Historial",
 	"billing.history.title": "Historial de facturació",
-	"billing.hosting": "Allotjament",
 	"billing.hour": "hora",
 	"billing.hours": "hores",
 	"billing.ingestion_cost.title": "Costos d'ingestió",
 	"billing.invalid_address": "L'adreça proporcionada no és vàlida",
 	"billing.invalid_card": "No hem pogut validar la teva targeta.",
 	"billing.invalid_vat": "Si us plau, afegiu el codi del país. Ex: ESB000000N",
+	"billing.max-file-size": "Mida màxima de fitxer",
 	"billing.month": "Mes",
-	"billing.monthly_estimation.description": "El cost estimat proporcionat es basa en els valors definits i està subjecte a canvis si es modifiquen aquests valors.",
-	"billing.monthly_estimation.title": "S'estima que el consum mensual té un cost de",
 	"billing.my-subscription": "La meva subscripció",
 	"billing.next-payment": "Proper pagament",
 	"billing.not_company": "No soc una empresa",
 	"billing.on_premise_cost": "Amb <strong>NucliaDB On-prem</strong> no comporta cap cost addicional.",
 	"billing.order_number": "Número de comanda",
 	"billing.paragraphs_per_file": "Un fitxer de text de 10 pàgines conté aproximadament 300 blocs de text",
+	"billing.parameter.ai-tokens-used": "Peticions de cerca",
 	"billing.parameter.files": "Quants documents?",
 	"billing.parameter.generative": "Quantes respostes generatives?",
 	"billing.parameter.media": "Quantes hores de vídeos/àudios?",
@@ -204,11 +204,11 @@
 	"billing.quotas.ingestion": "Ingestió",
 	"billing.quotas.kbs": "Nombre de Knowledge Boxes",
 	"billing.quotas.media": "Indexació de vídeo i àudio",
-	"billing.quotas.paragraphs": "Bloc de text emmagatzemat",
+	"billing.quotas.paragraphs": "Blocs de text emmagatzemats",
 	"billing.quotas.paragraphs_processed": "Nombre de blocs de text",
-	"billing.quotas.predict": "Consulta de classificació",
+	"billing.quotas.predict": "Peticions de classificació",
 	"billing.quotas.search": "Cerca",
-	"billing.quotas.searches": "Consulta de cerca semàntica",
+	"billing.quotas.searches": "Cerques",
 	"billing.quotas.storage": "Emmagatzematge",
 	"billing.quotas.train": "Entrenar",
 	"billing.quotas.training": "Entrenament",
@@ -217,24 +217,25 @@
 	"billing.reactivate": "Reactivar",
 	"billing.renew-subscription": "Renovar la subscripció",
 	"billing.review.confirm_subscription": "Confirma la teva subscripció",
-	"billing.review.cost": "Subscripció mensual de {{cost}} + costos dels consums amb un límit mensual de {{budget}}",
+	"billing.review.cost": "Subscripció de {{cost}} + costos dels consums amb un límit mensual de {{budget}}",
 	"billing.review.subscribe_to": "T'estàs subscribint a {{account}}",
 	"billing.review.title": "Revisa la teva subscripció",
 	"billing.review_confirm": "Revisar i confirmar",
 	"billing.save_budget": "Guardar límit de pressupost",
 	"billing.save_continue": "Desar i Continuar",
+	"billing.search-endpoints": "Endpoints de cerca: /chat, /ask, /find, /discover, /summarise",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Poseu-vos en contacte</a> amb nosaltres per conèixer tots els detalls de pagament en cas d'autoallotjar les vostres dades  mitjançant NucliaDB",
 	"billing.state": "Província",
 	"billing.subscribed": "Subscrit",
-	"billing.subscription.country": "Seleccioneu el país de facturació",
+	"billing.subscription.help": "Nuclia ofereix un model de subscripció + consum. Selecciona el nivell que més s'adapti a les teves necessitats i paga sobre la marxa, escala a l'instant o actualitza en qualsevol moment per obtenir funcions avançades.",
 	"billing.subscription.title": "Nivells de subscripció",
 	"billing.subscription-end": "La teva subscripció finalitzarà el",
 	"billing.subscription-ended": "Has finalitzat la teva subscripció a Nuclia",
 	"billing.subscription-renewed": "Has renovat la teva subscripció a Nuclia",
 	"billing.subscription_tier": "Nivell de subscripció",
 	"billing.success": "Subscripció satisfactòria",
+	"billing.support": "Suport",
 	"billing.tier": "Nivell",
-	"billing.tier_select.help": "Cada nivell té quotes diferents. Selecciona un nivell per obtenir informació més acurada dels costos de consum.",
 	"billing.trial.title": "{{days}} dies de prova",
 	"billing.unit": "unitat",
 	"billing.unlimited": "Il·limitat",
@@ -245,13 +246,16 @@
 	"billing.upgrade_now": "Actualitzar ara",
 	"billing.usage.consumables": "Consumibles",
 	"billing.usage.consumption": "Consum",
-	"billing.usage.interval": "Cost corresponent al consum des de {{from}} a {{to}}",
+	"billing.usage.cost": "Cost",
+	"billing.usage.description": "El cost mensual actual corresponent al consum fins a la data.",
+	"billing.usage.interval": "La propera factura es generarà el dia {{to}}",
 	"billing.usage.over_consume": "Sobreconsum",
-	"billing.usage.over_cost": "Sobrecost",
+	"billing.usage.requests": "Peticions",
 	"billing.usage.tier_included": "Inclòs al nivell",
-	"billing.usage.title": "Cost del sobreconsum",
+	"billing.usage.title": "Consum actual mensual",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Preus sense IVA",
+	"billing.year": "Any",
 	"confirm.delete_body": "Eliminar recurs",
 	"confirm.delete_title": "Segur que vols eliminar el recurs?",
 	"dashboard-home.desktop.available-for": "Disponible per a Windows, Mac i Linux",
@@ -717,13 +721,13 @@
 	"sidenav.activity": "Registre d'activitat",
 	"sidenav.advanced": "Avançat",
 	"sidenav.api_keys": "Tecles API",
-	"sidenav.billing": "Pagament",
 	"sidenav.classification": "Conjunts d'etiquetes",
 	"sidenav.home": "Inici",
 	"sidenav.list": "Llistat recursos",
 	"sidenav.manage-kbs": "Knowledge Boxes",
 	"sidenav.nua-keys": "Tecles NUA",
 	"sidenav.settings": "Preferències",
+	"sidenav.subscription": "Subscripció",
 	"sidenav.sync": "Sincronitzar",
 	"sidenav.synonyms": "Sinònims",
 	"sidenav.trainings": "Entrenaments",
