--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -93,6 +93,10 @@
 	"account.type.stash-starter": "Starter account",
 	"account.type.stash-startup": "Startup account",
 	"account.type.stash-trial": "Trial Account",
+	"account.type.v3enterprise": "Enterprise Account",
+	"account.type.v3fly": "Fly account",
+	"account.type.v3growth": "Growth account",
+	"account.type.v3starter": "Starter account",
 	"account.users_amount": "Total number of users in the account",
 	"account.users_left": "Total licenses left",
 	"account.zone_description": "Zone where data is hosted",
@@ -121,10 +125,9 @@
 	"billing.address": "Address",
 	"billing.amount": "Amount",
 	"billing.assistance": "Please, <a href=\"{{url}}\">contact us</a> for assistance.",
+	"billing.audit-log": "Audit log",
 	"billing.billing_details": "Billing details",
 	"billing.budget": "On-demand budget",
-	"billing.budget_calculator": "Budget calculator",
-	"billing.budget_calculator_help": "The budget calculator will allow you to make a monthly budget based on your specific requirements.",
 	"billing.budget_description": "To prevent overspending on monthly consumables, we recommend setting a monthly economic limit.<br> Failing to set a limit may result in unexpected charges for any consumption beyond the allotted amount.",
 	"billing.budget_warning": "The current overconsumption will be billed this month.<br>\nThe budget change will take effect next month.",
 	"billing.cancel-renewal": "Cancel the renewal of your active subscription.",
@@ -135,19 +138,17 @@
 	"billing.company_address": "Company address",
 	"billing.contact": "Contact us",
 	"billing.contact_name": "Contact name",
+	"billing.continuous-training": "Continuous AI training",
 	"billing.cost_over_limits": "Cost over limits",
-	"billing.cost_per_consumption": "Costs per consumption",
-	"billing.cost_per_consumption_help": "Calculate your cost per usage",
 	"billing.country": "Country",
 	"billing.current-over-cost": "Current over cost",
 	"billing.current-over-cost-help": "The invoice with final over costs will be sent to you on the day your billing cycle ends.",
+	"billing.current-plan": "Current plan",
 	"billing.custom_plan": "Custom plan",
 	"billing.delete-warning": "Your account will be permanently deleted seven days after the billing cycle ends.",
 	"billing.email": "Invoices sent to",
 	"billing.end-service": "End your service",
 	"billing.end-subscription": "End subscription",
-	"billing.enterprise_ready": "We are enterprise ready",
-	"billing.estimate_cost": "Estimate your cost",
 	"billing.extra_paragraphs_cost": "If the stored text block limit included is exceeded, we will charge {{price}} / stored text block.",
 	"billing.features.anon": "Data Anonymization",
 	"billing.features.apikey": "Self-hosted API key",
@@ -169,22 +170,21 @@
 	"billing.free": "Free",
 	"billing.history.link": "History",
 	"billing.history.title": "Account billing history",
-	"billing.hosting": "Hosting",
 	"billing.hour": "hour",
 	"billing.hours": "hours",
 	"billing.ingestion_cost.title": "Ingestion costs",
 	"billing.invalid_address": "The address provided is not valid",
 	"billing.invalid_card": "We were unable to validate your card.",
 	"billing.invalid_vat": "Please add the country code. e.g: ESB000000N",
+	"billing.max-file-size": "Max file size",
 	"billing.month": "Month",
-	"billing.monthly_estimation.description": "The estimated cost provided is based on the defined values and is subject to change if these values are modified.",
-	"billing.monthly_estimation.title": "Monthly consumption is estimated to cost",
 	"billing.my-subscription": "My subscription",
 	"billing.next-payment": "Next payment",
 	"billing.not_company": "I'm not a company",
 	"billing.on_premise_cost": "With <strong>NucliaDB On-prem</strong> does not carry any extra cost.",
 	"billing.order_number": "Order number",
 	"billing.paragraphs_per_file": "A 10-page text file contains approximately 300 text blocks",
+	"billing.parameter.ai-tokens-used": "Search requests",
 	"billing.parameter.files": "How many documents?",
 	"billing.parameter.generative": "How many generative answers?",
 	"billing.parameter.media": "How many hours of videos/audios?",
@@ -209,7 +209,7 @@
 	"billing.quotas.paragraphs_processed": "Number of text blocks",
 	"billing.quotas.predict": "Classification query",
 	"billing.quotas.search": "Search",
-	"billing.quotas.searches": "Semantic search query",
+	"billing.quotas.searches": "Searches",
 	"billing.quotas.storage": "Storage",
 	"billing.quotas.train": "Train",
 	"billing.quotas.training": "Training",
@@ -218,24 +218,25 @@
 	"billing.reactivate": "Reactivate",
 	"billing.renew-subscription": "Renew subscription",
 	"billing.review.confirm_subscription": "Confirm your subscription",
-	"billing.review.cost": "Monthly {{cost}} subscription + consumption costs with a monthly budget restriction of {{budget}}",
+	"billing.review.cost": "{{cost}} subscription + consumption costs with a monthly budget restriction of {{budget}}",
 	"billing.review.subscribe_to": "Subscribing to {{account}}",
 	"billing.review.title": "Review your subscription",
 	"billing.review_confirm": "Review & Confirm",
 	"billing.save_budget": "Save as budget limit",
 	"billing.save_continue": "Save & Continue",
+	"billing.search-endpoints": "Search requests endpoints: /chat, /ask, /find, /discover, /summarise",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Contact us</a> if you want your data self-hosted using NucliaDB to know all payment details.",
 	"billing.state": "State",
 	"billing.subscribed": "Subscribed",
-	"billing.subscription.country": "Select the billing country",
+	"billing.subscription.help": "Nuclia offers a subscription + consumption model. Select the tier that fits your need the most and pay as you go, scale instantly or upgrade anytime for advanced features.",
 	"billing.subscription.title": "Subscription tiers",
 	"billing.subscription-end": "Your subscription will end on",
 	"billing.subscription-ended": "You ended your subscription to Nuclia",
 	"billing.subscription-renewed": "You renewed your subscription to Nuclia",
 	"billing.subscription_tier": "Subscription tier",
 	"billing.success": "Successful subscription",
+	"billing.support": "Support",
 	"billing.tier": "Tier",
-	"billing.tier_select.help": "Each tier has different quotas. Select a tier to get a more accurate understanding of the consumption costs.",
 	"billing.trial.title": "{{days}} days trial",
 	"billing.unit": "unit",
 	"billing.unlimited": "Unlimited",
@@ -246,13 +247,16 @@
 	"billing.upgrade_now": "Upgrade now",
 	"billing.usage.consumables": "Consumables",
 	"billing.usage.consumption": "Consumption",
-	"billing.usage.interval": "Cost corresponding to the consumption from {{from}} to {{to}}",
+	"billing.usage.cost": "Cost",
+	"billing.usage.description": "The current monthly cost corresponding to the consumption to date.",
+	"billing.usage.interval": "Next invoice will be generated on {{to}}",
 	"billing.usage.over_consume": "Over consume",
-	"billing.usage.over_cost": "Over cost",
+	"billing.usage.requests": "Requests",
 	"billing.usage.tier_included": "Tier included",
-	"billing.usage.title": "Overconsumption cost",
+	"billing.usage.title": "Monthly current consumption",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Prices without VAT",
+	"billing.year": "Year",
 	"confirm.delete_body": "Delete resource",
 	"confirm.delete_title": "Are you sure you want to delete this resource?",
 	"dashboard-home.desktop.available-for": "Available for Windows, Mac and Linux",
@@ -718,13 +722,13 @@
 	"sidenav.activity": "Activity log",
 	"sidenav.advanced": "Advanced",
 	"sidenav.api_keys": "API keys",
-	"sidenav.billing": "Payment",
 	"sidenav.classification": "Label sets",
 	"sidenav.home": "Home",
 	"sidenav.list": "Resources list",
 	"sidenav.manage-kbs": "Knowledge Boxes",
 	"sidenav.nua-keys": "NUA keys",
 	"sidenav.settings": "Settings",
+	"sidenav.subscription": "Subscription",
 	"sidenav.sync": "Synchronize",
 	"sidenav.synonyms": "Synonyms",
 	"sidenav.trainings": "Trainings",
