--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -92,6 +92,10 @@
 	"account.type.stash-starter": "Cuenta Starter",
 	"account.type.stash-startup": "Cuenta Startup",
 	"account.type.stash-trial": "Cuenta de prueba",
+	"account.type.v3enterprise": "Cuenta Enterprise",
+	"account.type.v3fly": "Cuenta Fly",
+	"account.type.v3growth": "Cuenta Growth",
+	"account.type.v3starter": "Cuenta Starter",
 	"account.users_amount": "Usuarios totales a la cuenta",
 	"account.users_left": "Licencias disponibles",
 	"account.zone_description": "Elija la zona y el proveedor de procesamiento que aparecerá como predeterminado en todas las Cajas de conocimiento de esta cuenta.",
@@ -120,10 +124,9 @@
 	"billing.address": "Dirección",
 	"billing.amount": "Importe",
 	"billing.assistance": "Por favor, <a href=\"{{url}}\">contacta con nosotros</a> para obtener ayuda.",
+	"billing.audit-log": "Registro de actividad",
 	"billing.billing_details": "Datos de facturación",
 	"billing.budget": "Presupuesto bajo demanda",
-	"billing.budget_calculator": "Calculadora de presupuesto",
-	"billing.budget_calculator_help": "La calculadora de presupuesto te permite hacer un presupuesto mensual basado en tus requisitos específicos.",
 	"billing.budget_description": "Para evitar gastos excesivos en los consumos mensuales, recomendamos establecer un límite mensual.<br> Si no se establece un límite, se pueden generar cargos inesperados por los consumos que excedan la cantidad asignada.",
 	"billing.budget_warning": "El sobreconsumo actual se facturará este mes.<br>\nEl cambio de presupuesto entrará en vigencia el próximo mes.",
 	"billing.cancel-renewal": "Cancelar la renovación de tu suscripción.",
@@ -134,19 +137,17 @@
 	"billing.company_address": "Dirección de la empresa",
 	"billing.contact": "Contactar",
 	"billing.contact_name": "Persona de contacto",
+	"billing.continuous-training": "Entrenamiento continuo IA",
 	"billing.cost_over_limits": "Coste al exceder los límites",
-	"billing.cost_per_consumption": "Costes por consumo",
-	"billing.cost_per_consumption_help": "Calcule su costo por uso",
 	"billing.country": "País",
 	"billing.current-over-cost": "Sobrecoste actual",
 	"billing.current-over-cost-help": "La factura con los sobrecostes definitivos se te enviará el día que finalice tu ciclo de facturación.",
+	"billing.current-plan": "Plan actual",
 	"billing.custom_plan": "Plan personalizado",
 	"billing.delete-warning": "Su cuenta se eliminará permanentemente siete días después de que finalice el ciclo de facturación.",
 	"billing.email": "Facturas enviadas a",
 	"billing.end-service": "Finaliza tu servicio",
 	"billing.end-subscription": "Finalizar la suscripción",
-	"billing.enterprise_ready": "Listo para la empresa",
-	"billing.estimate_cost": "Estima tu coste",
 	"billing.extra_paragraphs_cost": "Si se excede el límite de bloques de texto almacenado incluido, cobraremos {{price}} / bloque de texto almacenado.",
 	"billing.features.anon": "Anonimización de datos",
 	"billing.features.apikey": "Clave de API autohospedada",
@@ -168,22 +169,21 @@
 	"billing.free": "Gratuito",
 	"billing.history.link": "Historial",
 	"billing.history.title": "Historial de facturación",
-	"billing.hosting": "Alojamiento",
 	"billing.hour": "hora",
 	"billing.hours": "horas",
 	"billing.ingestion_cost.title": "Costos de ingestión",
 	"billing.invalid_address": "La dirección proporcionada no es válida",
 	"billing.invalid_card": "No pudimos validar tu tarjeta.",
 	"billing.invalid_vat": "Por favor agregue el código de país. Por ejemplo: ESB000000N",
+	"billing.max-file-size": "Tamaño máximo de archivo",
 	"billing.month": "Mes",
-	"billing.monthly_estimation.description": "El coste estimado proporcionado se basa en los valores definidos y está sujeto a cambios si se modifican estos valores.",
-	"billing.monthly_estimation.title": "Se estima que el consumo mensual cuesta",
 	"billing.my-subscription": "Mi suscripción",
 	"billing.next-payment": "Próximo pago",
 	"billing.not_company": "No soy una empresa",
 	"billing.on_premise_cost": "Con <strong>NucliaDB On-prem</strong> no conlleva ningún coste extra.",
 	"billing.order_number": "Número de pedido",
 	"billing.paragraphs_per_file": "Un archivo de texto de 10 páginas contiene aproximadamente 300 bloques de texto.",
+	"billing.parameter.ai-tokens-used": "Peticiones de búsqueda",
 	"billing.parameter.files": "¿Cuántos documentos?",
 	"billing.parameter.generative": "¿Cuántas respuestas generativas?",
 	"billing.parameter.media": "¿Cuántas horas de videos/audios?",
@@ -204,11 +204,11 @@
 	"billing.quotas.ingestion": "Ingestión",
 	"billing.quotas.kbs": "Número de Knowledge Boxes",
 	"billing.quotas.media": "Indexación de video y audio",
-	"billing.quotas.paragraphs": "Bloque de texto almacenado",
+	"billing.quotas.paragraphs": "Bloques de texto almacenados",
 	"billing.quotas.paragraphs_processed": "Número de bloques de texto",
-	"billing.quotas.predict": "Consulta de clasificación",
+	"billing.quotas.predict": "Peticiones de clasificación",
 	"billing.quotas.search": "Búsqueda",
-	"billing.quotas.searches": "Consulta de búsqueda semántica",
+	"billing.quotas.searches": "Búsquedas",
 	"billing.quotas.storage": "Almacenamiento",
 	"billing.quotas.train": "Entrenar",
 	"billing.quotas.training": "Entrenamiento",
@@ -217,24 +217,25 @@
 	"billing.reactivate": "Reactivar",
 	"billing.renew-subscription": "Renovar la suscripción",
 	"billing.review.confirm_subscription": "Confirma tu suscripción",
-	"billing.review.cost": "Suscripción mensual de {{cost}}  + costes de los consumos con un límite mensual de {{budget}}",
+	"billing.review.cost": "Suscripción de {{cost}}  + costes de los consumos con un límite mensual de {{budget}}",
 	"billing.review.subscribe_to": "Te estás suscribiendo a {{account}}",
 	"billing.review.title": "Revisa tu suscripción",
 	"billing.review_confirm": "Revisar y confirmar",
 	"billing.save_budget": "Guardar límite de presupuesto",
 	"billing.save_continue": "Guardar y Continuar",
+	"billing.search-endpoints": "Endpoints de búsqueda: /chat, /ask, /find, /discover, /summarise",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Póngase en contacto</a> con nosotros para conocer todos los detalles de pago en caso de autoalojar sus datos mediante NucliaDB",
 	"billing.state": "Provincia",
 	"billing.subscribed": "Suscrito",
-	"billing.subscription.country": "Seleccione el país de facturación",
+	"billing.subscription.help": "Nuclia ofrece un modelo de suscripción + consumo. Selecciona el nivel que mejor se adapte a sus necesidades y paga sobre la marcha, escala instantáneamente o actualiza en cualquier momento para obtener funciones avanzadas.",
 	"billing.subscription.title": "Niveles de subscripción",
 	"billing.subscription-end": "Tu suscripción finalizará el",
 	"billing.subscription-ended": "Has finalizado tu suscripción a Nuclia",
 	"billing.subscription-renewed": "Has renovado tu suscripción a Nuclia",
 	"billing.subscription_tier": "Nivel de suscripción",
 	"billing.success": "Suscripción exitosa",
+	"billing.support": "Soporte",
 	"billing.tier": "Nivel",
-	"billing.tier_select.help": "Cada nivel tiene cuotas diferentes. Seleccione un nivel para obtener información más precisa de los costes de consumo.",
 	"billing.trial.title": "{{days}} días de prueba",
 	"billing.unit": "unidad",
 	"billing.unlimited": "Ilimitado",
@@ -245,13 +246,16 @@
 	"billing.upgrade_now": "Actualizar ahora",
 	"billing.usage.consumables": "Consumibles",
 	"billing.usage.consumption": "Consumo",
-	"billing.usage.interval": "Coste correspondiente al consumo de {{from }} a {{to}}",
+	"billing.usage.cost": "Coste",
+	"billing.usage.description": "El costo mensual actual correspondiente al consumo hasta la fecha.",
+	"billing.usage.interval": "La próxima factura se generará el {{to}}",
 	"billing.usage.over_consume": "Sobreconsumo",
-	"billing.usage.over_cost": "Sobrecoste",
+	"billing.usage.requests": "Peticiones",
 	"billing.usage.tier_included": "Incluido en el nivel",
-	"billing.usage.title": "Coste del sobreconsumo",
+	"billing.usage.title": "Consumo actual mensual",
 	"billing.vat_id": "VAT ID",
 	"billing.without_vat": "Precios sin IVA",
+	"billing.year": "Año",
 	"confirm.delete_body": "Eliminar recurso",
 	"confirm.delete_title": "¿Seguro que quieres eliminar este recurso?",
 	"dashboard-home.desktop.available-for": "Disponible para Windows, Mac y Linux",
@@ -717,13 +721,13 @@
 	"sidenav.activity": "Registro de actividad",
 	"sidenav.advanced": "Avanzado",
 	"sidenav.api_keys": "Claves de api",
-	"sidenav.billing": "Pago",
 	"sidenav.classification": "Conjuntos de etiquetas",
 	"sidenav.home": "Inicio",
 	"sidenav.list": "Listado de recursos",
 	"sidenav.manage-kbs": "Knowledge Boxes",
 	"sidenav.nua-keys": "Claves NUA",
 	"sidenav.settings": "Preferencias",
+	"sidenav.subscription": "Suscripción",
 	"sidenav.sync": "Sincronizar",
 	"sidenav.synonyms": "Sinónimos",
 	"sidenav.trainings": "Entrenamientos",
