--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -89,10 +89,14 @@
 	"account.type.stash-business": "Compte d'affaires",
 	"account.type.stash-developer": "Compte de démarrage/développeur",
 	"account.type.stash-enterprise": "Compte Entreprise",
-	"account.type.stash-growth": "Compte de croissance",
-	"account.type.stash-starter": "Compte de démarrage",
-	"account.type.stash-startup": "Compte de démarrage",
+	"account.type.stash-growth": "Compte Growth",
+	"account.type.stash-starter": "Compte Starter",
+	"account.type.stash-startup": "Compte Startup",
 	"account.type.stash-trial": "Compte d'essai",
+	"account.type.v3enterprise": "Compte Entreprise",
+	"account.type.v3fly": "Compte Fly",
+	"account.type.v3growth": "Compte Growth",
+	"account.type.v3starter": "Compte Starter",
 	"account.users_amount": "Nombre total d'utilisateurs dans le compte",
 	"account.users_left": "Total des licences restantes",
 	"account.zone_description": "Zone où les données sont hébergées",
@@ -121,10 +125,9 @@
 	"billing.address": "Adresse",
 	"billing.amount": "Montant",
 	"billing.assistance": "Veuillez <a href=\"{{url}}\">nous contacter</a> pour obtenir de l'aide.",
+	"billing.audit-log": "Journal d'activité",
 	"billing.billing_details": "Détails de la facturation",
 	"billing.budget": "Budget à la demande",
-	"billing.budget_calculator": "Calculateur budgétaire",
-	"billing.budget_calculator_help": "Le calculateur de budget vous permettra d'établir un budget mensuel en fonction de vos besoins spécifiques.",
 	"billing.budget_description": "Pour éviter de dépenser trop en consommables mensuels, nous vous recommandons de fixer une limite économique mensuelle.<br> Le fait de ne pas définir de limite peut entraîner des frais inattendus pour toute consommation dépassant le montant alloué.",
 	"billing.budget_warning": "La surconsommation actuelle sera facturée ce mois-ci.<br>Le changement budgétaire entrera en vigueur le mois prochain.",
 	"billing.cancel-renewal": "Annulez le renouvellement de votre abonnement.",
@@ -135,19 +138,17 @@
 	"billing.company_address": "Adresse de la société",
 	"billing.contact": "Contactez nous",
 	"billing.contact_name": "Nom du contact",
+	"billing.continuous-training": "Formation continue IA",
 	"billing.cost_over_limits": "Coût dépassant les limites",
-	"billing.cost_per_consumption": "Coûts par consommation",
-	"billing.cost_per_consumption_help": "Calculez votre coût par utilisation",
 	"billing.country": "Pays",
 	"billing.current-over-cost": "Surcoût actuel",
 	"billing.current-over-cost-help": "La facture avec les surcoûts finaux vous sera envoyée le jour de la fin de votre cycle de facturation.",
+	"billing.current-plan": "Plan actuel",
 	"billing.custom_plan": "Forfait personnalisé",
 	"billing.delete-warning": "Votre compte sera définitivement supprimé sept jours après la fin du cycle de facturation.",
 	"billing.email": "Factures envoyées à",
 	"billing.end-service": "Mettre fin à votre service",
 	"billing.end-subscription": "Mettre fin à l'abonnement",
-	"billing.enterprise_ready": "Nous sommes prêts pour l'entreprise",
-	"billing.estimate_cost": "Estimez votre coût",
 	"billing.extra_paragraphs_cost": "Si la limite de blocs de texte stockés inclus est dépassée, nous facturerons {{price}} / bloc de texte stocké.",
 	"billing.features.anon": "Anonymisation des données",
 	"billing.features.apikey": "Clé API auto-hébergée",
@@ -166,25 +167,24 @@
 	"billing.features.usage": "Analyse d’utilisation et rétention",
 	"billing.features.videos": "Indexation de vidéos et audio",
 	"billing.features.widget": "Accès au système de widgets",
-	"billing.free": "Libre",
+	"billing.free": "Gratuit",
 	"billing.history.link": "L'histoire",
 	"billing.history.title": "Historique de facturation du compte",
-	"billing.hosting": "Hébergement",
 	"billing.hour": "heure",
 	"billing.hours": "heures",
 	"billing.ingestion_cost.title": "Coûts d'ingestion",
 	"billing.invalid_address": "L'adresse fournie n'est pas valide",
 	"billing.invalid_card": "Nous n'avons pas pu valider votre carte.",
 	"billing.invalid_vat": "Veuillez ajouter le code du pays. par exemple : ESB000000N",
+	"billing.max-file-size": "Taille maximale du fichier",
 	"billing.month": "Mois",
-	"billing.monthly_estimation.description": "Le coût estimé fourni est basé sur les valeurs définies et est susceptible de changer si ces valeurs sont modifiées.",
-	"billing.monthly_estimation.title": "La consommation mensuelle est estimée à",
 	"billing.my-subscription": "Mon abonnement",
 	"billing.next-payment": "Prochain paiement",
 	"billing.not_company": "Je ne suis pas une entreprise",
-	"billing.on_premise_cost": "Avec <strong>NucliaDB On-prem</strong> n’entraîne aucun coût supplémentaire.",
+	"billing.on_premise_cost": "Avec <strong>NucliaDB On-prem</strong> n’entraîne aucun coût supplémentaire.\n",
 	"billing.order_number": "Numéro de commande",
 	"billing.paragraphs_per_file": "Un fichier texte de 10 pages contient environ 300 blocs de texte",
+	"billing.parameter.ai-tokens-used": "Demandes de recherche",
 	"billing.parameter.files": "Combien de documents ?",
 	"billing.parameter.generative": "Combien de réponses génératives ?",
 	"billing.parameter.media": "Combien d'heures de vidéos/audios ?",
@@ -209,8 +209,8 @@
 	"billing.quotas.paragraphs_processed": "Nombre de blocs de texte",
 	"billing.quotas.predict": "Requête de classification",
 	"billing.quotas.search": "Recherche",
-	"billing.quotas.searches": "Requête de recherche sémantique",
-	"billing.quotas.storage": "Espace de rangement",
+	"billing.quotas.searches": "Recherches",
+	"billing.quotas.storage": "Stockage",
 	"billing.quotas.train": "Train",
 	"billing.quotas.training": "Entraînement",
 	"billing.quotas.up-to": "Jusqu'à",
@@ -218,25 +218,26 @@
 	"billing.reactivate": "Réactiver",
 	"billing.renew-subscription": "Renouveler l'abonnement",
 	"billing.review.confirm_subscription": "Confirmez votre abonnement",
-	"billing.review.cost": "Abonnement mensuel {{cost}} + frais de consommation avec une restriction budgétaire mensuelle de {{budget}}",
+	"billing.review.cost": "Abonnement {{cost}} + frais de consommation avec une restriction budgétaire mensuelle de {{budget}}",
 	"billing.review.subscribe_to": "S'abonner à {{account}}",
 	"billing.review.title": "Vérifiez votre abonnement",
 	"billing.review_confirm": "Examiner et confirmer",
 	"billing.save_budget": "Enregistrer comme limite budgétaire",
 	"billing.save_continue": "Enregistrer continuer",
+	"billing.search-endpoints": "Endpoints de recherche: /chat, /ask, /find, /discover, /summarise",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Contactez-nous</a> si vous souhaitez que vos données soient auto-hébergées à l'aide de NucliaDB pour connaître tous les détails de paiement.",
 	"billing.state": "Etat",
 	"billing.subscribed": "Souscrit",
-	"billing.subscription.country": "Sélectionnez le pays de facturation",
+	"billing.subscription.help": "Nuclia propose un modèle d'abonnement + consommation. Sélectionnez le niveau qui correspond le plus à vos besoins et payez au fur et à mesure, évoluez instantanément ou effectuez une mise à niveau à tout moment pour bénéficier de fonctionnalités avancées.",
 	"billing.subscription.title": "Niveaux d'abonnement",
 	"billing.subscription-end": "Votre abonnement prendra fin le",
 	"billing.subscription-ended": "Vous avez mis fin à votre abonnement à Nuclia",
 	"billing.subscription-renewed": "Vous avez renouvelé votre abonnement à Nuclia",
 	"billing.subscription_tier": "Niveau d'abonnement",
 	"billing.success": "Inscription réussie",
+	"billing.support": "Soutien",
 	"billing.tier": "Étage",
-	"billing.tier_select.help": "Chaque niveau a des quotas différents. Sélectionnez un niveau pour obtenir une compréhension plus précise des coûts de consommation.",
-	"billing.trial.title": "{{days}}  jours d'essai",
+	"billing.trial.title": "{{days}} jours d'essai",
 	"billing.unit": "Unité",
 	"billing.unlimited": "Illimité",
 	"billing.unsubscribe-error": "Erreur lors de l'annulation de l'abonnement",
@@ -246,13 +247,16 @@
 	"billing.upgrade_now": "Mettre à jour maintenant",
 	"billing.usage.consumables": "Consommables",
 	"billing.usage.consumption": "Consommation",
-	"billing.usage.interval": "Coût correspondant à la consommation de {{from}} à {{to}}",
+	"billing.usage.cost": "Coût",
+	"billing.usage.description": "Le coût mensuel actuel correspondant à la consommation à ce jour.",
+	"billing.usage.interval": "La prochaine facture sera générée le {{to}}",
 	"billing.usage.over_consume": "Surconsommer",
-	"billing.usage.over_cost": "Surcoût",
+	"billing.usage.requests": "Demandes",
 	"billing.usage.tier_included": "Niveau inclus",
-	"billing.usage.title": "Coût de surconsommation",
+	"billing.usage.title": "Consommation actuelle mensuelle",
 	"billing.vat_id": "Numéro de TVA",
 	"billing.without_vat": "Prix sans TVA",
+	"billing.year": "Année",
 	"confirm.delete_body": "Supprimer la ressource",
 	"confirm.delete_title": "Voulez-vous vraiment supprimer cette ressource?",
 	"dashboard-home.desktop.available-for": "Disponible pour Windows, Mac et Linux",
@@ -380,7 +384,7 @@
 	"generic.origin": "Origine",
 	"generic.owner": "Propriétaire",
 	"generic.page": "Page",
-	"generic.pagination": " {{current}} sur {{total}}",
+	"generic.pagination": " {{current}} sur {{total}}",
 	"generic.preferences": "Préférences",
 	"generic.presence": "Présence",
 	"generic.previous": "Page précédente",
@@ -718,13 +722,13 @@
 	"sidenav.activity": "Journal d'activité",
 	"sidenav.advanced": "Avancé",
 	"sidenav.api_keys": "Clés API",
-	"sidenav.billing": "Paiement",
 	"sidenav.classification": "Familles d'étiquettes",
 	"sidenav.home": "Accueil",
 	"sidenav.list": "Liste des ressources",
 	"sidenav.manage-kbs": "Knowledge Boxes",
 	"sidenav.nua-keys": "Clés NUA",
 	"sidenav.settings": "Réglages",
+	"sidenav.subscription": "Abonnement",
 	"sidenav.sync": "Synchroniser",
 	"sidenav.synonyms": "Synonymes",
 	"sidenav.trainings": "Entraînements",
