[sc-8180] Fix translations

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -224,7 +224,7 @@
 	"billing.review_confirm": "Review & Confirm",
 	"billing.save_budget": "Save as budget limit",
 	"billing.save_continue": "Save & Continue",
-	"billing.search-endpoints": "Search requests endpoints: /chat, /ask, /find, /discover, /summarise",
+	"billing.search-endpoints": "Search requests endpoints: /chat, /ask, /find, /discover, /summarize",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Contact us</a> if you want your data self-hosted using NucliaDB to know all payment details.",
 	"billing.state": "State",
 	"billing.subscribed": "Subscribed",
@@ -628,7 +628,6 @@
 	"resource.error.no-field": "There is no field in this resource",
 	"resource.extra-metadata.invalid-json": "Invalid JSON",
 	"resource.extra-metadata.label": "Extra metadata",
-	"resource.failed_resources_popover": "Processing failed files",
 	"resource.field.add": "Add a",
 	"resource.field.addition-successful": "Field added successfully",
 	"resource.field.delete": "Delete field",
@@ -665,7 +664,8 @@
 	"resource.origin.modified": "Modified",
 	"resource.origin.related": "Related",
 	"resource.origin.url": "URL",
-	"resource.pending_resources_popover": "Files pending to be processed",
+	"resource.popover.error-resources": "Files that have failed to process",
+	"resource.popover.pending-resources": "Files pending to be processed",
 	"resource.preview.open-viewer": "Open viewer",
 	"resource.processed_resources": "Processed resources",
 	"resource.profile": "Resource",
@@ -680,7 +680,6 @@
 	"resource.shared_queue": "The processing queue is shared among trial accounts.",
 	"resource.status": "Status",
 	"resource.status-help.failed": "Files failing to be processed",
-	"resource.status-help.pending": "Files pending to be processed",
 	"resource.status_error": "Error while processing",
 	"resource.status_loading": "Loading status…",
 	"resource.status_next": "Will be processed next",
