--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -224,7 +224,7 @@
 	"billing.review_confirm": "Examiner et confirmer",
 	"billing.save_budget": "Enregistrer comme limite budgétaire",
 	"billing.save_continue": "Enregistrer continuer",
-	"billing.search-endpoints": "Endpoints de recherche: /chat, /ask, /find, /discover, /summarise",
+	"billing.search-endpoints": "Endpoints de recherche: /chat, /ask, /find, /discover, /summarize",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Contactez-nous</a> si vous souhaitez que vos données soient auto-hébergées à l'aide de NucliaDB pour connaître tous les détails de paiement.",
 	"billing.state": "Etat",
 	"billing.subscribed": "Souscrit",
@@ -628,7 +628,6 @@
 	"resource.error.no-field": "Il n'y a aucun champ dans cette ressource",
 	"resource.extra-metadata.invalid-json": "JSON invalide",
 	"resource.extra-metadata.label": "Métadonnées supplémentaires",
-	"resource.failed_resources_popover": "Traitement des fichiers ayant échoué",
 	"resource.field.add": "Ajouter un",
 	"resource.field.addition-successful": "Champ ajouté avec succès",
 	"resource.field.delete": "Supprimer le champ",
@@ -665,7 +664,8 @@
 	"resource.origin.modified": "Modifié",
 	"resource.origin.related": "En relation",
 	"resource.origin.url": "URL",
-	"resource.pending_resources_popover": "Dossiers en attente de traitement",
+	"resource.popover.error-resources": "Fichiers dont le traitement a échoué",
+	"resource.popover.pending-resources": "Ressources en attente de traitement",
 	"resource.preview.open-viewer": "Ouvrir la visionneuse",
 	"resource.processed_resources": "Ressources traitées",
 	"resource.profile": "Ressource",
@@ -680,7 +680,6 @@
 	"resource.shared_queue": "La file d'attente de traitement est partagée entre les comptes d'essai.",
 	"resource.status": "Statut",
 	"resource.status-help.failed": "Les fichiers ne parviennent pas à être traités",
-	"resource.status-help.pending": "Dossiers en attente de traitement",
 	"resource.status_error": "Erreur lors du traitement",
 	"resource.status_loading": "Statut de chargement…",
 	"resource.status_next": "Sera traité ensuite",
