--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -223,7 +223,7 @@
 	"billing.review_confirm": "Revisar i confirmar",
 	"billing.save_budget": "Guardar límit de pressupost",
 	"billing.save_continue": "Desar i Continuar",
-	"billing.search-endpoints": "Endpoints de cerca: /chat, /ask, /find, /discover, /summarise",
+	"billing.search-endpoints": "Endpoints de cerca: /chat, /ask, /find, /discover, /summarize",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Poseu-vos en contacte</a> amb nosaltres per conèixer tots els detalls de pagament en cas d'autoallotjar les vostres dades  mitjançant NucliaDB",
 	"billing.state": "Província",
 	"billing.subscribed": "Subscrit",
@@ -627,7 +627,6 @@
 	"resource.error.no-field": "No hi ha cap camp en aquest recurs",
 	"resource.extra-metadata.invalid-json": "JSON no vàlid",
 	"resource.extra-metadata.label": "Metadades addicionals",
-	"resource.failed_resources_popover": "El processament dels fitxers ha fallat",
 	"resource.field.add": "Afegeix a",
 	"resource.field.addition-successful": "El camp s'ha afegit correctament",
 	"resource.field.delete": "Suprimeix el camp",
@@ -664,7 +663,8 @@
 	"resource.origin.modified": "Modificat",
 	"resource.origin.related": "Relacionats",
 	"resource.origin.url": "URL",
-	"resource.pending_resources_popover": "Expedients pendents de processar",
+	"resource.popover.error-resources": "Fitxers que no s'han pogut processar",
+	"resource.popover.pending-resources": "Recurs pendents de processar",
 	"resource.preview.open-viewer": "Visor obert",
 	"resource.processed_resources": "Recursos processats",
 	"resource.profile": "Recurs",
@@ -679,7 +679,6 @@
 	"resource.shared_queue": "La cua de processament és compartida entre els comptes de prova.",
 	"resource.status": "Estat",
 	"resource.status-help.failed": "Els fitxers no es poden processar",
-	"resource.status-help.pending": "Expedients pendents de processar",
 	"resource.status_error": "Error en processar",
 	"resource.status_loading": "S'està carregant l'estat...",
 	"resource.status_next": "A continuació es processarà",
