[sc-8169] Add index size in kb home page

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -277,6 +277,7 @@
 	"dashboard-home.kb-details.uid": "Knowledge Box UID",
 	"dashboard-home.kb-metrics.title": "Contingut de la Knowledge Box",
 	"dashboard-home.kb-metrics.total.fields": "Camps",
+	"dashboard-home.kb-metrics.total.index-size": "Mida de l'índex",
 	"dashboard-home.kb-metrics.total.paragraphs": "Blocs de text",
 	"dashboard-home.kb-metrics.total.sentences": "Vectors",
 	"dashboard-home.kb-metrics.total.title": "Recursos",
