--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -278,6 +278,7 @@
 	"dashboard-home.kb-details.uid": "Knowledge Box UID",
 	"dashboard-home.kb-metrics.title": "Contenu de la Knowledge Box",
 	"dashboard-home.kb-metrics.total.fields": "Champs",
+	"dashboard-home.kb-metrics.total.index-size": "Taille de l'index",
 	"dashboard-home.kb-metrics.total.paragraphs": "Blocs de texte",
 	"dashboard-home.kb-metrics.total.sentences": "Vecteurs",
 	"dashboard-home.kb-metrics.total.title": "Ressources",
