--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -223,7 +223,7 @@
 	"billing.review_confirm": "Revisar y confirmar",
 	"billing.save_budget": "Guardar límite de presupuesto",
 	"billing.save_continue": "Guardar y Continuar",
-	"billing.search-endpoints": "Endpoints de búsqueda: /chat, /ask, /find, /discover, /summarise",
+	"billing.search-endpoints": "Endpoints de búsqueda: /chat, /ask, /find, /discover, /summarize",
 	"billing.self_hosted": "<a href=\"{{ url }}\">Póngase en contacto</a> con nosotros para conocer todos los detalles de pago en caso de autoalojar sus datos mediante NucliaDB",
 	"billing.state": "Provincia",
 	"billing.subscribed": "Suscrito",
@@ -277,6 +277,7 @@
 	"dashboard-home.kb-details.uid": "Knowledge Box UID",
 	"dashboard-home.kb-metrics.title": "Contenido del Knowledge Box",
 	"dashboard-home.kb-metrics.total.fields": "Campos",
+	"dashboard-home.kb-metrics.total.index-size": "Tamaño del índice",
 	"dashboard-home.kb-metrics.total.paragraphs": "Bloques de texto",
 	"dashboard-home.kb-metrics.total.sentences": "Vectores",
 	"dashboard-home.kb-metrics.total.title": "Recursos",
@@ -627,7 +628,6 @@
 	"resource.error.no-field": "No hay ningún campo en este recurso.",
 	"resource.extra-metadata.invalid-json": "JSON inválido",
 	"resource.extra-metadata.label": "Metadatos adicionales",
-	"resource.failed_resources_popover": "Procesamiento de archivos fallidos",
 	"resource.field.add": "Agrega un",
 	"resource.field.addition-successful": "Campo agregado con éxito",
 	"resource.field.delete": "Eliminar campo",
@@ -664,7 +664,8 @@
 	"resource.origin.modified": "Modificado",
 	"resource.origin.related": "Relacionado",
 	"resource.origin.url": "URL",
-	"resource.pending_resources_popover": "Expedientes pendientes de tramitar",
+	"resource.popover.error-resources": "Archivos que no se han podido procesar",
+	"resource.popover.pending-resources": "Archivos pendientes de procesar",
 	"resource.preview.open-viewer": "Visor abierto",
 	"resource.processed_resources": "Recursos procesados",
 	"resource.profile": "Recurso",
@@ -679,7 +680,6 @@
 	"resource.shared_queue": "La cola de procesamiento es compartida entre las cuentas de prueba.",
 	"resource.status": "Estado",
 	"resource.status-help.failed": "Archivos que no se pueden procesar",
-	"resource.status-help.pending": "Expedientes pendientes de tramitar",
 	"resource.status_error": "Error al procesar",
 	"resource.status_loading": "Cargando estado…",
 	"resource.status_next": "Será procesado a continuación",
